# vgmplay-libvgm

./: .gitignore  .gitmodules  CMakeLists.txt  Updates.txt  VGMPlay.ini  VGMPlay.txt  config.cpp  config.hpp  dbus.cpp  dbus.hpp  dbus_stub.cpp  m3uargparse.cpp  m3uargparse.hpp  main.cpp  mediactrl.cpp  mediactrl.hpp  mediactrl_WinKeys.cpp  mediactrl_WinKeys.hpp  mediactrl_WinSMTC.cpp  mediactrl_WinSMTC.hpp  mediactrl_dbus.cpp  mediactrl_dbus.hpp  mediactrl_stub.cpp  mediainfo.cpp  mediainfo.hpp  mmkeys.h  mmkeys.hpp  mmkeys_Win.c  mmkeys_Win.cpp  mmkeys_stub.c  mmkeys_stub.cpp  playcfg.cpp  playcfg.hpp  playctrl.cpp  player.cpp  player.hpp  utils.cpp  utils.hpp  version.h
.github/workflows/: GHA.yml
libs/include_vc6/: crtdefs.h
